Resource description flyover is too wide for small descriptions, fixes #467.

--- a/media/css/admin.css
+++ b/media/css/admin.css
@@ -426,3 +426,8 @@ ul.pages li a.selected
     list-style:disc;
 }
 
+/* */
+
+.resource-description-flyover-container {
+    max-width:25%;
+}
